Complete StaffAdapter.cs methods

--- a/LuxuryAPIv2/LuxuryAPIv2.csproj
+++ b/LuxuryAPIv2/LuxuryAPIv2.csproj
@@ -163,6 +163,7 @@
   <ItemGroup>
     <Compile Include="Adapters\CategoryAdapter.cs" />
     <Compile Include="Adapters\HairServicesAdapter.cs" />
+    <Compile Include="Adapters\StaffAdapter.cs" />
     <Compile Include="Adapters\Status\StatusAdapter.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -207,6 +208,7 @@
     <Compile Include="Models\HairService.cs" />
     <Compile Include="Models\Node\CategoryNode.cs" />
     <Compile Include="Models\Node\HairServiceNode.cs" />
+    <Compile Include="Models\Staff.cs" />
     <Compile Include="Models\Status\NonQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -231,6 +233,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Resources\Query\LuxuryDB.sql" />
+    <Content Include="Resources\Query\TestCase.sql" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
